--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="google.png">
-    <input type="text"></input>
+    <div class="red"></div>
+    <div class="blue"></div>
+    <div class="green"></div>
+    
+
 </body>
 </html>
+<!--
+<div class="main">
+    <img class="logo" src="google.png"/>
+    <input class="search" type="text"></input>
+</div>
+<div>
+    <button>Google Search</button>
+    <button>I'm feeling Lucky</button>
+</div>
+-->
