--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="red"></div>
-    <div class="blue"></div>
-    <div class="green"></div>
+    <div class="main">
+        <img class="logo" src="google.png"/>
+        <input class="search" type="text"></input>
+    </div>
+    <div class="btn-wrapper">
+        <button class="btn">Google Search</button>
+        <button class="btn">I'm feeling Lucky</button>
+    </div>
     
 
 </body>
 </html>
 <!--
-<div class="main">
-    <img class="logo" src="google.png"/>
-    <input class="search" type="text"></input>
-</div>
-<div>
-    <button>Google Search</button>
-    <button>I'm feeling Lucky</button>
-</div>
+
 -->
